[project]
name = "splitflow-buy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio==3.4.3",
    "bbae-invest-api==0.1.3",
    "chaseinvest-api==0.3.0",
    "curl_cffi==0.7.4",
    "discord.py==2.4.0",
    "dspac_invest_api==0.1.3",
    "fennel-invest-api==1.1.2",
    "fidelity-api==0.0.8",
    "firstrade==0.0.30",
    "GitPython==3.1.44",
    "nodriver==0.39",
    "public-invest-api==1.1.0",
    "pyotp==2.9.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "robin-stocks==3.3.1",
    "schwab-api==0.4.3",
    "selenium-stealth==1.0.6",
    "setuptools==75.8.0",
    "tastytrade==9.7",
    "vanguard-api==0.2.7"
]
[tool.poetry.dependencies.playwright_stealth]
git = "https://github.com/MaxxRK/playwright_stealth.git"
rev = "f87d7c3d67134ad6def356dce6545c2f42662dfb"

[tool.poetry.dependencies.webull]
git = "https://github.com/NelsonDane/webull.git"
rev = "ef14ae63f9e1436fbea77fe864df54847cf2f730"

[tool.setuptools]
platforms = ["macOS-15.2"]